# sample-apps

./: .gitignore  .gitmodules  README.md  newrelic.ini  requirements.txt  start-app.sh
aiohttp_client/: client.py  flask_server.py  newrelic.ini
aiohttp_server/: app.py  newrelic.ini
arm-hammer/: README.md
async/: app.py  newrelic.ini
background/: README.md  background.py  newrelic.ini
boto/: README.md  s3.py
bottle/: app.py
buildout/: app.py
c-ext/: README.md
c-extensions/: README.md  hello.c  setup.py
cat/: README.md  app1.py  app2.py  app3.py  newrelic-api.ini  newrelic-app1.ini  newrelic-app2.ini  newrelic-app3.ini  newrelic-web.ini  requirements.txt
celery/: README.md  calls_tasks.py  celeryconfig.py  newrelic.ini  requirements.txt  run_tasks.py  start_celery_multi.sh  tasks.py  worker-newrelic.ini
celery-multi/: flask_app.py
cheroot/: app.py  newrelic.ini  newrelic_adapter_cheroot.py
cherrypy/: README.md  app.py  environ_watch_point  gdb-10.txt  gdb-12.txt  gdb-14.txt  gdb-15.txt  gdb-3.txt  gdb-5.txt  gdb-7.txt  id  newrelic.ini  requirements.txt  start_app.sh  watch_stats_table
cherrypy-boto3/: README.md  app.py  requirements.txt
coroutines/: app.py  app27.py  decorators.py
couchbase/: README.md  start_couchbase.sh  stop_couchbase.sh
custom-attributes/: README.md  app.py  requirements.txt
data_source_generator/: README.md  app.py
databasestores/: Dockerfile  app.py  newrelic.ini  postgresql.conf  requirements.txt  (+1 more)
rust/otlp/: Cargo.toml  Dockerfile  README.md  build_deploy.sh  serverless.yml
rust/otlp/src/: main.rs
(+1275 files in other folders)
